--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
             <version>2.19.0</version>
 
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock-standalone -->
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-standalone</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
