--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>com.fengtai</groupId>
     <artifactId>wiremock-custom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock -->
@@ -17,11 +23,11 @@
 
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock-standalone -->
-        <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock-standalone</artifactId>
-            <version>2.19.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.tomakehurst</groupId>-->
+            <!--<artifactId>wiremock-standalone</artifactId>-->
+            <!--<version>2.15.0</version>-->
+        <!--</dependency>-->
 
 
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -33,13 +39,48 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.wiremock/wiremock-webhooks-extension -->
+        <!--<dependency>-->
+            <!--<groupId>org.wiremock</groupId>-->
+            <!--<artifactId>wiremock-webhooks-extension</artifactId>-->
+            <!--<version>0.0.1</version>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.wiremock</groupId>
-            <artifactId>wiremock-webhooks-extension</artifactId>
-            <version>0.0.1</version>
+        <groupId>com.tairan.qa</groupId>
+        <artifactId>wiremock-extension-webhooks</artifactId>
+        <version>1.0-SNAPSHOT</version>
         </dependency>
-
     </dependencies>
 
+    <build>
+        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+            <plugins>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>com.github.tomakehurst.wiremock.standalone.WireMockServerRunner</mainClass>
+                            </manifest>
+                        </archive>
+                        <descriptorRefs>
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <finalName>${project.artifactId}-${project.version}</finalName>
+                        <appendAssemblyId>false</appendAssemblyId>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
